--- a/view/work_log.glade
+++ b/view/work_log.glade
@@ -253,6 +253,7 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
+                    <accelerator key="s" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                 </child>
               </object>
